--- a/0. 환경세팅과 보안.md
+++ b/0. 환경세팅과 보안.md
@@ -18,7 +18,7 @@ bWAPP은 또 뭐고, 가상 머신은 또 뭐고.. 아직은 잘 모르겠죠?
 
 ## [bWAPP](http://www.itsecgames.com/index.htm) 부터 알아보자면,,
 
->![[bWAPP.png]]
+>![](./attachments/0.%20환경세팅과%20보안/bWAPP.png)
 
 **b**uggy **w**eb **app**lication의 약자로, 소개부터 엄청나죠?
 
