--- a/0. 환경세팅과 보안.md
+++ b/0. 환경세팅과 보안.md
@@ -18,7 +18,7 @@ bWAPP은 또 뭐고, 가상 머신은 또 뭐고.. 아직은 잘 모르겠죠?
 
 ## [bWAPP](http://www.itsecgames.com/index.htm) 부터 알아보자면,,
 
->![[bWAPP.png]]
+>![](./attachments/0.%20환경세팅과%20보안/bWAPP.png)
 
 **b**uggy **w**eb **app**lication의 약자로, 소개부터 엄청나죠?
 
@@ -56,7 +56,7 @@ bWAPP은 또 뭐고, 가상 머신은 또 뭐고.. 아직은 잘 모르겠죠?
 
 라고 **간단하게 설명**하고 퉁치는 경우가 많았는데, ~~(그렇다고 그 시절 사람이라고 생각하지는 말아줘..)~~
 
-> ![[VM (legacy).png]]
+> ![](./attachments/0.%20환경세팅과%20보안/VM%20(legacy).png)
 
 현재는 VM Escape라는 개념이 전문가의 영역에서 대중적으로 많이 알려지면서,
 
@@ -68,7 +68,7 @@ bWAPP은 또 뭐고, 가상 머신은 또 뭐고.. 아직은 잘 모르겠죠?
 
 ### VM vs Container
 
->![[VMvsContainer.png]]
+>![](./attachments/0.%20환경세팅과%20보안/VMvsContainer.png)
 
 인터넷에 검색한다면 이런 그림을 한 번 쯤 보게 될 겁니다.
 
@@ -98,7 +98,7 @@ bWAPP은 또 뭐고, 가상 머신은 또 뭐고.. 아직은 잘 모르겠죠?
 
 [bee-box](https://sourceforge.net/projects/bwapp/files/bee-box/) 여기 들어가서, 1.6 버전으로 다운로드 해 주세요.
 
-![[beebox-download.png]]
+![](./attachments/0.%20환경세팅과%20보안/beebox-download.png)
 
 무작정 초록색 버튼을 클릭해서 최신버전을 설치하는 것이 아니라, 하단에 `1.6` 버전으로 사용할 겁니다!
 
@@ -134,13 +134,13 @@ Linux 배포판 중, Debian 계열의 OS입니다.
 
 [Kali Linux 설치 페이지](https://www.kali.org/get-kali/#kali-platforms)에 들어가시면, Installer Images랑 Virtual Machines가 Recommended로 표시되어 있습니다.
 
->![[kaliLinux-choose.png]]
+>![](./attachments/0.%20환경세팅과%20보안/kaliLinux-choose.png)
 
 물론 왼쪽을 클릭해서 iso파일 받고, 직접 운영체제 세팅하고.. 그래도 되지만,
 
 오른쪽을 클릭하면 **이미 설치까지 완료**된 운영체제를 **바로 사용**할 수 있기 때문에, 오른쪽을 클릭해 줄게요.
 
->![[kaliLinux-download.png]]
+>![](./attachments/0.%20환경세팅과%20보안/kaliLinux-download.png)
 
 아까 선택했던 가상머신인 **VirtualBox**를 클릭해 다운로드 받아 줄게요.
 
