Update Enviroment Setting

--- a/0. 환경세팅과 보안.md
+++ b/0. 환경세팅과 보안.md
@@ -147,3 +147,117 @@ Linux 배포판 중, Debian 계열의 OS입니다.
 역시 bee-box와 마찬가지로 확장자는 `7z` 일텐데, **반디집**을 이용해서 **압축해제**해 주세요!
 
 (다른 압축 프로그램써서 오류나도 난 모름)
+
+## 이제 bee-box를 실행 및 설정해 봅시다
+
+1. Oracle VM VirtualBox를 실행합니다.
+2. 새로 만들기를 클릭합니다.
+3. 세팅을 입력하고, 다음 버튼을 클릭합니다.
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup1.png)
+
+4. 기본 메모리와 프로세서를 적당한 값으로 입력 후 다음 클릭 (저는 기본값으로 설정했습니다.)
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup2.png)
+
+5. 기존 가상 하드 디스크 파일 사용을 선택하고, 우측 아이콘을 클릭하여 하드 디스크 선택기를 열어줍니다
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup3.png)
+
+6. 추가 버튼을 누르고, `bee-box.vmdk`를 선택 후, 열기 클릭
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup4.png)
+
+7. 아까 추가한 `bee-box.vmdk` 선택 후 선택 클릭
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup5.png)
+
+8.  다음 클릭 
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup6.png)
+
+9. 완료 클릭
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup7.png)
+
+10. 시작 클릭
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup8.png)
+
+11. 잠시 기다렸다가, 다음과 같은 화면 나오면 설치는 성공
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup9.png)
+
+12. 장치 > 게스트 확장 CD 이미지 삽입 클릭 > 바탕화면의 CD 이미지 클릭 > Open Autorun Prompt 클릭 > Run 클릭
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup10.png)
+
+13. 우측 상단의 X버튼 클릭 > 시스템 전원 끄기 선택 > 확인 클릭
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup11.png)
+
+14. 설정 클릭 > 좌측에서 네트워크 선택 > 설정 바꿔주기 ~~> 확인 클릭~~ (이 설정은 Host OS에서 연결이 가능하도록 설정해 줍니다.)
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup12.png)
+
+15. 좌측에서 디스플레이 선택 > 설정 바꿔주기 > 확인 클릭
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup13.png)
+
+16. 다시 실행 후, Terminal에서 `ifconfig` 입력 후, 서버(공격 대상, 피해자)의 IP주소 확인하기
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup14.png)
+
+17. HostOS에서 아까 확인한 ip주소를 입력 후, 잘 접속되는지 확인하기
+>![](./attachments/0.%20환경세팅과%20보안/beebox-setup15.png)
+
+접속할 수 있는 IP주소는 사용자마다 다를 수 있습니다.
+
+이렇게 해서, 피해자 컴퓨터(Server, Bee-Box) 세팅이 끝났습니다!
+
+**만약, 피해자 컴퓨터가 없다면(혹은 IP주소를 모른다면), 공격이 발생할 일도 없겠죠?**
+
+그래서 앞으로는 공부할 땐, **Bee-Box(서버)를 실행**시키고, **피해자 컴퓨터(Bee-Box)의 IP주소를 확인**이 필수이며, 매번 같은 작업이기 때문에 이와 관련된 부분은 생략하도록 하겠습니다.
+
+## 공격자 컴퓨터(Kali-Linux)도 설정해 봅시다
+
+Kali-Linux 압축해제까지 다 완료했죠?
+
+그러면 VirtualBox를 실행시켜 불러와 줍시다.
+
+1. 추가 클릭
+2. kali-어쩌고저쩌고.vbox 선택
+3. 열기 클릭
+>![](./attachments/0.%20환경세팅과%20보안/kali-setup1.png)
+
+4. 설정 > 필요한 부분은 알아서 세팅해 주고 (위에서 웬만한 것들은 했으니 패스 / 단, 네트워크는 NAT-기본으로 선택)
+5. ID: kali / PW: kali 입력 후 로그인 클릭
+>![](./attachments/0.%20환경세팅과%20보안/kali-setup2.png)
+
+6. 똑같이 게스트 확장 CD 설정해 주고
+7. Bee-Box에 접속이 잘 되는지 확인해 줍니다.
+>![](./attachments/0.%20환경세팅과%20보안/kali-setup3.png)
+
+(방금 전에 HostOS에서 접속한 IP주소 그대로!)
+
+이렇게 환경세팅이 끝났습니다.
+
+# 🖥️ 역할놀이의 중요성
+
+이제부터 우리는 **역할놀이**를 해야 합니다.
+
+우리가 **실제로 운영중인 서버에 공격**을 하면..
+
+옛날에는 "우.와.정.말.대.단.하.다. 스.카.우.트.해.야.지?" 라는 분위기였지만,
+
+요즘에는 **"이 shake it 고소때려야지"** 라는 분위기로 변했습니다.
+
+물론 시대가 변하면서 사회적 인식이 변화되기도 하고, 법적, 윤리적 인식이 강화되었기 때문도 있지만,
+
+생각해 보면 피해자 입장에서는 멀쩡히 영업하고 있는데 갑자기 **무단으로 공격**을 해서 **영업을 방해**하는 건데, 누가 좋게 봐주겠나요..?
+
+그래서, **가상의 피해자(Bee-Box)와 가상의 공격자(Kali-Linux)를 세팅**해 놓고 학습하는 것이 일반적인데,
+
+동일한 HostOS에서 실행되다 보니, **실제 공격에서는 극히 제한된 정보**만으로 이루어지지만,
+
+**지금과 같은 환경에서는 마음만 먹는다면 언제든지 정보를 쉽게 오픈**해서 볼 수 있습니다.
+
+이렇게 된다면 학습의 효과가 떨어지기 때문에, 지금부터 약속합시다!
+
+1. **피해자 컴퓨터**, Bee-Box는 **오직 서버 오픈용(IP 주소 확인용)으로만** 사용한다
+2. **공격자 컴퓨터**, Kali-Linux에서 Bee-Box로 공격을 한다
+3. 항상 **"왜 이런 공격이 발생할 수 있었지?", "어떻게 해야 예방할 수 있지?"** 라는 의문점에서, **피해자 컴퓨터**, Bee-Box로 접속해 **정보(ex. 코드)를 확인**한다
+
+그러면 이제, 앞으로는 항상 **피해자 컴퓨터(Bee-Box)와 공격자 컴퓨터(Kail-Linux)를 실행**해야 학습이든 뭐든 할 수 있겠네요?
+
+당연히, 이것도 매번 필수적인, 디폴트값이기 때문에 이와 관련된 부분은 생략하도록 하겠습니다.
+
+# 🔐 보안 개괄
+
+업데이트 예정
